--- a/mern-app/src/App.css
+++ b/mern-app/src/App.css
@@ -17,3 +17,11 @@
     justify-content: center;
     align-items: center;
 }
+
+
+/* Carousel */
+.carousel_myti{
+    border: 1px solid red;
+    width: 100%;
+    height: 450px;
+}
