--- a/mern-app/src/components/Activities/Activities.css
+++ b/mern-app/src/components/Activities/Activities.css
@@ -1,3 +1,19 @@
-.nav-img{
+.activities_header{
+    height: 150px;
+    position: relative;
+}
+.activities{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    bottom: 8px;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+.activities_header img{
     width: 100%;
+    position: absolute;
+    top: -15px;
 }
