--- a/mern-app/src/App.css
+++ b/mern-app/src/App.css
@@ -1,5 +1,5 @@
 .app{
-    margin-bottom: 50px;
+    margin-top: 50px;
     justify-content: center;
     display: flex;
     flex-direction: column;
