--- a/mern-app/src/components/Nav/Nav.css
+++ b/mern-app/src/components/Nav/Nav.css
@@ -3,12 +3,71 @@
     top: 0;
     display: flex;
     width: 100%;
-    height: 50px;
-    justify-content: center;
+    height: 60px;
+    justify-content: space-between;
     /* border: 1px solid red; */
-    background-color: #fff;
+    background-color: rgb(28, 78, 172);
+    border-bottom: 1px solid #d5d5d5;
+    z-index: 9;
 }
-.nav-container img {
-    margin-bottom: 5px;
-    width: 40px;
+.nav-container svg {
+    font-size: 43px;
+    margin: 10px;
+    color: #fff
+}
+
+.nav-container img{
+    width: 43px;
+    height: 43px;
+    border-radius: 50%;
+    object-fit: cover;
+    overflow: hidden;
+    margin: 10px;
+}
+
+.UserInfo{
+    position: absolute;
+    left: 0;
+    top: 60px;
+    padding: 10px;
+    width: auto;
+    height: auto;
+    background: rgb(28, 78, 172);
+    border-bottom-right-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* opacity: 1; */
+    /* transition: opacity 500ms ease-in, display 600ms ease; */
+}
+
+.UserInfo.active{
+    /* opacity: 0; */
+    display: none;
+}
+.UserInfo div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.Menu{
+    position: absolute;
+    background: rgb(28, 78, 172);
+    width: 60%;
+    height: 100vh;
+    right: 0;
+    top: 60px;
+}
+.Menu h4{
+    text-align: center;
+    color: #fff;
+}
+.Menu a{
+    text-decoration: none;
+}
+.Menu.active{
+    right: -60%;
 }
