Add Fetching data with axios, and Backend call get raedy

--- a/mern-app/src/components/Activities/Activities.css
+++ b/mern-app/src/components/Activities/Activities.css
@@ -7,7 +7,7 @@
     justify-content: space-evenly;
     align-items: center;
     position: absolute;
-    bottom: 8px;
+    bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
