--- a/mern-app/src/App.css
+++ b/mern-app/src/App.css
@@ -25,3 +25,36 @@
     width: 100%;
     height: 450px;
 }
+
+/* Cities */
+.Cities{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 15px;
+    padding: 0 5px;
+    background: #eeeeee;
+    border-radius: 10px;
+}
+.City{
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    padding:0 12px;
+    margin: 3px 0;
+    height: 50px;
+    border:1px solid rgb(208, 230, 255);
+    background: #fff;
+}
+.City h5{
+    text-transform: uppercase;
+    margin: 0;
+}
+.City p{
+    margin: 0;
+}
