--- a/mern-app/src/App.css
+++ b/mern-app/src/App.css
@@ -1,17 +1,19 @@
-.app{
+.app {
     margin-top: 50px;
     justify-content: center;
     display: flex;
     flex-direction: column;
 }
-.presentation{
+
+.presentation {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     margin: 10px 30px 0 30px;
     padding: 0 20px;
     font-size: 18px;
 }
-.Sign-container{
+
+.Sign-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -20,14 +22,17 @@
 
 
 /* Carousel */
-.carousel_myti{
+
+.carousel_myti {
     border: 1px solid red;
     width: 100%;
     height: 450px;
 }
 
+
 /* Cities */
-.Cities{
+
+.Cities {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -35,26 +40,32 @@
     align-items: center;
     margin: 0 15px;
     padding: 0 5px;
-    background: #eeeeee;
+    background: #e2e2e2;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+    /* border: 1px solid rgb(124, 124, 124); */
     border-radius: 10px;
 }
-.City{
+
+.City {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100px;
-    padding:0 12px;
+    padding: 0 12px;
     margin: 3px 0;
     height: 50px;
-    border:1px solid rgb(208, 230, 255);
-    background: #fff;
+    /* border: 1px solid rgb(208, 230, 255); */
+    background: rgb(28, 78, 172);
+    color: #fff;
 }
-.City h5{
+
+.City h5 {
     text-transform: uppercase;
     margin: 0;
 }
-.City p{
+
+.City p {
     margin: 0;
 }
