--- a/mern-app/src/App.css
+++ b/mern-app/src/App.css
@@ -1,71 +1,83 @@
 .app {
-    margin-top: 50px;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
+	margin-top: 50px;
+	justify-content: center;
+	display: flex;
+	flex-direction: column;
 }
 
 .presentation {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    margin: 10px 30px 0 30px;
-    padding: 0 20px;
-    font-size: 18px;
+	font-family: Arial, Helvetica, sans-serif;
+	text-align: center;
+	margin: 10px 30px 0 30px;
+	padding: 0 20px;
+	font-size: 18px;
 }
 
 .Sign-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 }
-
 
 /* Carousel */
 
 .carousel_myti {
-    border: 1px solid red;
-    width: 100%;
-    height: 450px;
+	border: 1px solid red;
+	width: 100%;
+	height: 450px;
 }
-
 
 /* Cities */
 
 .Cities {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 15px;
-    padding: 0 5px;
-    background: #e2e2e2;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-    /* border: 1px solid rgb(124, 124, 124); */
-    border-radius: 10px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+	/* margin: 0 15px; */
+	padding: 0 5px;
+	background: #e2e2e2;
+	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+	/* border: 1px solid rgb(124, 124, 124); */
+	border-radius: 10px;
 }
 
 .City {
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100px;
-    padding: 0 12px;
-    margin: 3px 0;
-    height: 50px;
-    /* border: 1px solid rgb(208, 230, 255); */
-    background: rgb(28, 78, 172);
-    color: #fff;
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100px;
+	padding: 0 12px;
+	margin: 3px 0;
+	height: 50px;
+	/* border: 1px solid rgb(208, 230, 255); */
+	background: rgb(28, 78, 172);
+	color: #fff;
 }
 
 .City h5 {
-    text-transform: uppercase;
-    margin: 0;
+	text-transform: uppercase;
+	margin: 0;
 }
 
 .City p {
-    margin: 0;
+	margin: 0;
+}
+
+.search {
+	font-family: Arial, Helvetica, sans-serif;
+	display: flex;
+	font-size: 18px;
+	flex-direction: column;
+	margin: 10px 0;
+}
+.search input {
+	height: 20px;
+	border-radius: 3px;
+	border: none;
+	border-bottom: 2px solid gray;
 }
