--- a/mern-app/src/App.css
+++ b/mern-app/src/App.css
@@ -76,8 +76,10 @@
 	margin: 10px 0;
 }
 .search input {
+	margin: 5px 0;
 	height: 20px;
-	border-radius: 3px;
-	border: none;
-	border-bottom: 2px solid gray;
+	border-radius: 7px;
+	padding: 5px;
+	border: 1px solid rgb(228, 228, 228);
+	border-bottom: 3px solid gray;
 }
