--- a/mern-app/src/App.css
+++ b/mern-app/src/App.css
@@ -54,8 +54,8 @@
 	padding: 0 12px;
 	margin: 3px 0;
 	height: 50px;
-	/* border: 1px solid rgb(208, 230, 255); */
-	background: rgb(28, 78, 172);
+	background: rgb(6, 0, 102);
+	background: linear-gradient(90deg, rgba(6, 0, 102, 1) 0%, rgba(26, 26, 138, 1) 53%, rgba(16, 110, 129, 1) 94%);
 	color: #fff;
 }
 
@@ -75,6 +75,7 @@
 	flex-direction: column;
 	margin: 10px 0;
 }
+
 .search input {
 	margin: 5px 0;
 	height: 20px;
