--- a/mern-app/src/components/Nav/Nav.css
+++ b/mern-app/src/components/Nav/Nav.css
@@ -1,7 +1,8 @@
-.nav-container{
+.nav-container {
     position: fixed;
     top: 0;
     display: flex;
+    max-width: 480px;
     width: 100%;
     height: 60px;
     justify-content: space-between;
@@ -10,13 +11,14 @@
     border-bottom: 1px solid #d5d5d5;
     z-index: 9;
 }
+
 .nav-container svg {
     font-size: 43px;
     margin: 10px;
     color: #fff
 }
 
-.nav-container img{
+.nav-container img {
     width: 43px;
     height: 43px;
     border-radius: 50%;
@@ -25,7 +27,7 @@
     margin: 10px;
 }
 
-.UserInfo{
+.UserInfo {
     position: absolute;
     left: 0;
     top: 60px;
@@ -42,18 +44,19 @@
     /* transition: opacity 500ms ease-in, display 600ms ease; */
 }
 
-.UserInfo.active{
+.UserInfo.active {
     /* opacity: 0; */
     display: none;
 }
-.UserInfo div{
+
+.UserInfo div {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.Menu{
+.Menu {
     position: absolute;
     background: rgb(28, 78, 172);
     width: 60%;
@@ -61,13 +64,16 @@
     right: 0;
     top: 60px;
 }
-.Menu h4{
+
+.Menu h4 {
     text-align: center;
     color: #fff;
 }
-.Menu a{
+
+.Menu a {
     text-decoration: none;
 }
-.Menu.active{
+
+.Menu.active {
     right: -60%;
 }
