--- a/mern-app/src/index.css
+++ b/mern-app/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* margin-bottom: 20px; */
+  max-width: 500px;
+  width: 100%;
 }
 
 code {
