--- a/mern-app/src/components/CarouselImg/CarouselImg.css
+++ b/mern-app/src/components/CarouselImg/CarouselImg.css
@@ -1,7 +1,9 @@
 .CarouselImg{
     height: 280px;
     width: 100%;
-    background-color: rgb(14, 129, 223);
-    border-radius: 7px;
+    border-top: 2px solid rgb(235, 235, 235);
+    border-bottom: 2px solid rgb(235, 235, 235);
+    /* background-color: rgb(209, 234, 255); */
+    /* border-radius: 4px; */
     /* border: 1px solid red; */
 }
