--- a/mern-app/src/components/Loader/Loader.css
+++ b/mern-app/src/components/Loader/Loader.css
@@ -3,6 +3,9 @@
     justify-content: center;
     align-content: center;
     position: relative;
+    height: 150px;
+    width: 150px;
+    margin: 0 auto;
 }
 
 .bigSvg{
