--- a/mern-app/src/App.css
+++ b/mern-app/src/App.css
@@ -1,5 +1,5 @@
 .App{
-	margin-top: 70px;
+	margin-top: 60px;
 }
 a{
 	text-decoration: none;
@@ -11,6 +11,9 @@ a{
 	margin: 10px 30px 0 30px;
 	padding: 0 20px;
 	font-size: 18px;
+}
+.presentation p{
+	background: none;	
 }
 
 .Sign-container {
