--- a/mern-app/src/styles/Itineraries.css
+++ b/mern-app/src/styles/Itineraries.css
@@ -1,4 +1,4 @@
-.Itineraries__container{
+.Itineraries{
     display: flex;
     /* align-items: center; */
     /* justify-content: center; */
@@ -10,4 +10,9 @@
 }
 .Itineraries__nav h3, button{
     margin: 0 2px;
+}
+
+.Itineraries__container{
+    display: flex;
+    flex-direction: column;
 }
