--- a/mern-app/src/components/ActivityByItinerary/ActivityByItinerary.css
+++ b/mern-app/src/components/ActivityByItinerary/ActivityByItinerary.css
@@ -1,12 +1,28 @@
-.ActivityByItinerary__item{
+.ActivityByItinerary__item {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 200px;
     height: 130px;
-    background: rgb(241, 241, 241);
-    border-radius: 10px;
-    border: 2px solid #000;
-    margin: 3px;
+    background: rgb(255, 255, 255);
+    /* border-radius: 10px; */
+    /* border: 1px solid #000; */
+    margin: 5px 7px;
     padding: 0 35px;
+    box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.75);
+}
+
+.ActivityByItinerary__item p {
+    z-index: 2;
+    color: white;
+    font-size: 28px;
+}
+
+.ActivityByItinerary__item img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    overflow: hidden;
 }
