--- a/mern-app/src/components/ActivityByItinerary/ActivityByItinerary.css
+++ b/mern-app/src/components/ActivityByItinerary/ActivityByItinerary.css
@@ -11,6 +11,7 @@
     margin: 5px 7px;
     padding: 0 35px;
     box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.75);
+    cursor: pointer;
 }
 
 .ActivityByItinerary__item p {
@@ -25,4 +26,5 @@
     height: 100%;
     object-fit: cover;
     overflow: hidden;
+    filter: brightness(70%);
 }
