--- a/mern-app/src/components/City/City.css
+++ b/mern-app/src/components/City/City.css
@@ -14,10 +14,8 @@
 	/* border-radius: 10px; */
 }
 
-
-
 .City {
-    position: relative;
+  position: relative;
 	border-radius: 7px;
 	display: flex;
 	flex-direction: column;
@@ -25,7 +23,6 @@
 	align-items: center;
 	width: 100%;
 	padding: 0  0;
-	margin: 3px 0;
 	height: 180px;
 	/* background: rgb(6, 0, 102); */
 	/* background: linear-gradient(90deg, rgba(6, 0, 102, 1) 0%, rgba(26, 26, 138, 1) 53%, rgba(16, 110, 129, 1) 94%); */
@@ -33,29 +30,22 @@
 }
 
 .City img{
-    position: absolute;
-    margin: 0 auto;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+	position: absolute;
+	margin: 0 auto;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	filter: brightness(80%);
+		
 }
 .City p{
-    background: rgba(161, 161, 161, 0.7);
-    padding: 0 10px;
-    border-radius: 2px;
     z-index: 2;
+		text-transform: uppercase;
+		font-size: 36px;
+		letter-spacing: 10px;
 }
 
-.City h5 {
-	text-transform: uppercase;
-	margin: 0;
-}
-
-.City p {
-	margin: 0;
-	font-size: 36px;
-}
