--- a/mern-app/src/components/Itinerary/Itinerary.css
+++ b/mern-app/src/components/Itinerary/Itinerary.css
@@ -1,10 +1,9 @@
 .Itinerary__item {
-    /* width: 99%; */
-    border: 1px solid #000;
+    width: 100%;
+    border-top: 1px solid #000;
     display: flex;
     flex-direction: column;
     transition: 500ms;
-    /* position: relative; */
 }
 
 .Itinerary__profile {
@@ -39,22 +38,18 @@ p {
     justify-content: space-between;
 }
 
-.Itineary__data p {
-    /* margin-right: 10px; */
-    /* padding-right: 5px; */
-}
-
 .Itinerary__activities {
     width: 100%;
     height: 0;
     background: #ffffff;
-    /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
-    /* margin-bottom: 60px; */
     transition: 400ms;
+}
+
+.Itinerary__activities h4{
+    margin: 5px 0;
 }
 
 .Itinerary__activities__slider {
@@ -62,13 +57,13 @@ p {
     align-items: center;
     max-width: 400px;
     width: 100%;
-    height: 150px;
+    height: 160px;
     scroll-snap-type: x proximity;
-    overflow-x: scroll
+    overflow-x: scroll;
 }
 
 .Itinerary__activities__slider::-webkit-scrollbar {
-    display: none;
+    /* display: none; */
 }
 
 .Itinerary__activities__slider div {
@@ -76,8 +71,6 @@ p {
 }
 
 .Itinerary__button {
-    /* position: absolute; */
-    /* bottom: 0; */
     width: 98%;
     height: 30px;
     background-color: rgb(28, 78, 172);
