--- a/mern-app/src/index.css
+++ b/mern-app/src/index.css
@@ -1,10 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Muli&display=swap);
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Muli', sans-serif;
   max-width: 500px;
   width: 100%;
   margin: 0 auto;
