Add page Login and  Register, New Background-color for the App

--- a/mern-app/src/App.css
+++ b/mern-app/src/App.css
@@ -1,5 +1,8 @@
 .App{
-	margin-top: 60px;
+	margin-top: 60px;	
+	background: rgb(28,78,172);
+	background: linear-gradient(180deg, rgba(28,78,172,1) 0%, rgba(0,96,196,1) 21%, rgba(0,151,255,1) 57%, rgba(155,214,255,1) 93%);
+	color: #fff;
 }
 a{
 	text-decoration: none;
@@ -11,9 +14,6 @@ a{
 	margin: 10px 30px 0 30px;
 	padding: 0 20px;
 	font-size: 18px;
-}
-.presentation p{
-	background: none;	
 }
 
 .Sign-container {
@@ -35,4 +35,9 @@ a{
 	width: 100%;
 	margin: 3px 0;
 		
+}
+
+h2{
+	color: #fff;
+	font-size: 28px;
 }
