--- a/mern-app/src/components/ActivityByItinerary/ActivityByItinerary.css
+++ b/mern-app/src/components/ActivityByItinerary/ActivityByItinerary.css
@@ -3,15 +3,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 200px;
+    width: 180px;
     height: 130px;
     background: rgb(255, 255, 255);
     /* border-radius: 10px; */
     /* border: 1px solid #000; */
     margin: 5px 7px;
-    padding: 0 35px;
+    padding: 0 10px;
     box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.75);
     cursor: pointer;
+    flex-shrink: 0;
 }
 
 .ActivityByItinerary__item p {
