--- a/mern-app/src/components/CardImg/CardImg.css
+++ b/mern-app/src/components/CardImg/CardImg.css
@@ -13,11 +13,11 @@
     object-fit: cover;
     background-size: cover;
     border-radius: 3px;
+    /* filter: brightness(90%); */
 }
 
 .CardImg h5 {
     position: absolute;
-    background: #fff;
+    background: rgba(192, 192, 192, 0.8);
     padding: 5px;
-
 }
