--- a/mern-app/src/styles/Register.css
+++ b/mern-app/src/styles/Register.css
@@ -13,31 +13,35 @@
   flex-wrap: wrap;
 }
 
-.Register__img{
-  margin: 0 auto;
+.Register__form .Register__img{
+  margin-bottom: 55px;
   border: 3px solid rgb(255, 255, 255);
   width: 100px;
   height: 100px;
   border-radius: 100%;
   position: relative;
 }
-.Register__img p{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.Register__img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 100%;
+}
+
+
+.Register__form .Register__img p{
   text-align: center;
   position: absolute;
-  top: 0;
-  bottom: 0;
+  bottom: -50px;
   left: 0;
   right: 0;
   margin:0 auto;
   color: #fff;
-  text-decoration: underline;
+  font-size: 15px;
 }
 .Register__container form{
   width: 100%;
-  padding: 20px 60px 20px 60px ;
+  padding: 0 60px 20px 60px ;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -45,17 +49,26 @@
 }
 
 .Register__form input{
-  width: 85%;
+  width: 100%;
   margin-bottom: 10px;
   background-color: #fff;
   /* border: 3px solid rgb(28, 78, 172); */
   border: none;
   border-radius: 20px;
-  font-size: 24px;
+  font-size: 20px;
   padding:5px 15px;
   color: rgb(28, 78, 172);
+  text-align: center;
+}
+.Register__form input:nth-child(1){
+  position: absolute;
+  font-size: 10px;
+  padding: 0;
+  border: none;
+  width: 200px;
 }
 .Register__form select{
+  width: 60%;
   margin-bottom: 10px;
   border-radius: 20px;
   border: 3px solid rgb(28, 78, 172);
@@ -84,7 +97,8 @@
 }
 .Register__form__button{
   margin: 0 auto;
-  width: 60px;
+  width: auto;
+  padding: 0 20px;
   height: 35px;
   background-color: rgb(28, 78, 172);
   border: none;
