--- a/mern-app/src/components/Itinerary/Itinerary.css
+++ b/mern-app/src/components/Itinerary/Itinerary.css
@@ -4,7 +4,10 @@
     display: flex;
     flex-direction: column;
     transition: 500ms;
+    background-color: rgb(255, 255, 255);
+    color: #000;
 }
+
 
 .Itinerary__profile {
     width: 30%;
