--- a/mern-app/src/styles/Login.css
+++ b/mern-app/src/styles/Login.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    height: 98vh;
 }
 
 .Login__container{
