--- a/mern-app/src/styles/Register.css
+++ b/mern-app/src/styles/Register.css
@@ -2,6 +2,7 @@
 
   background: rgb(17,211,188);
   background: linear-gradient(0deg, rgba(17,211,188,1) 0%, rgba(133,122,255,1) 100%);
+  height: 96vh;
 
 }
 .Register h2{
@@ -50,7 +51,7 @@
 
 .Register__form input{
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   background-color: #fff;
   /* border: 3px solid rgb(28, 78, 172); */
   border: none;
@@ -60,16 +61,9 @@
   color: rgb(28, 78, 172);
   text-align: center;
 }
-.Register__form input:nth-child(1){
-  position: absolute;
-  font-size: 10px;
-  padding: 0;
-  border: none;
-  width: 200px;
-}
 .Register__form select{
   width: 60%;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   border-radius: 20px;
   border: 3px solid rgb(28, 78, 172);
   padding: 2px 10px;
@@ -81,19 +75,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 60%;
 }
 .Register__form__terms input[type="checkbox"] {
   width: 20px;
   height: 20px;
-  border-radius: 10px;
   margin: 0;
 }
 .Register__form__terms p{
-  margin-top: 15px;
   margin-left: 10px;
-  margin-bottom: 10px;
   font-size: 12px;
-  width: auto
 }
 .Register__form__button{
   margin: 0 auto;
