--- a/backend/client/src/App.css
+++ b/backend/client/src/App.css
@@ -1,36 +1,44 @@
-.App{
-	margin-top: 60px;	
-	background: rgb(28,78,172);
-	background: linear-gradient(180deg, rgba(28,78,172,1) 0%, rgba(0,96,196,1) 21%, rgba(0,151,255,1) 57%, rgba(41,171,226,1) 93%);
-	color: #fff;
+.App {
+  margin-top: 60px;
+  background: rgb(28, 78, 172);
+  background: linear-gradient(
+    180deg,
+    rgba(28, 78, 172, 1) 0%,
+    rgba(0, 96, 196, 1) 21%,
+    rgba(0, 151, 255, 1) 57%,
+    rgba(41, 171, 226, 1) 93%
+  );
+  color: #fff;
+  /* min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center; */
 }
-a{
-	text-decoration: none;
+a {
+  text-decoration: none;
 }
-
 
 .Sign-container {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Carousel */
 
 .carousel_myti {
-	border: 1px solid red;
-	width: 100%;
-	height: 450px;
+  border: 1px solid red;
+  width: 100%;
+  height: 450px;
 }
 
-.a__city{
-	width: 100%;
-	margin: 3px 0;
-		
+.a__city {
+  width: 100%;
+  margin: 3px 0;
 }
 
-h2{
-	color: #fff;
-	font-size: 28px;
+h2 {
+  color: #fff;
+  font-size: 28px;
 }
