Fix Frontend, and update Backend's models

--- a/backend/client/src/App.css
+++ b/backend/client/src/App.css
@@ -9,6 +9,7 @@
     rgba(41, 171, 226, 1) 93%
   );
   color: #fff;
+  box-sizing: border-box;
   /* min-height: 100vh;
   display: flex;
   justify-content: center;
