--- a/backend/client/src/styles/Itineraries.css
+++ b/backend/client/src/styles/Itineraries.css
@@ -3,11 +3,14 @@
     /* align-items: center; */
     /* justify-content: center; */
     flex-direction: column;
+    margin-bottom: 58px;
 }
 .Itineraries__nav{
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
+    padding: 5px 0;
 }
 .Itineraries__nav h3, button{
     margin: 0 2px;
@@ -15,5 +18,7 @@
 
 .Itineraries__container{
     display: flex;
+    min-height: 80vh;
     flex-direction: column;
+    padding: 0 12px;
 }
