--- a/backend/client/src/styles/Cities.css
+++ b/backend/client/src/styles/Cities.css
@@ -1,25 +1,29 @@
-.Cities__page h3{
+.Cities__page{
+  margin-bottom: 55px;
+  box-sizing: border-box;
+  min-height: 83vh;
+}
+.Cities__page h3 {
   margin-top: 30px;
   margin-left: 10px;
 }
 
 .search {
-	font-family: Arial, Helvetica, sans-serif;
-	display: flex;
-	font-size: 18px;
-	flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  font-size: 18px;
+  flex-direction: column;
   margin: 20px 0;
   padding: 0 30px;
 }
 
 .search input {
-	margin: 5px 0;
-	height: 20px;
-	border-radius: 17px;
+  margin: 5px 0;
+  height: 20px;
+  border-radius: 17px;
   padding: 10px;
   border: none;
-  background-color: rgb(214, 214, 214);
+  background-color: rgb(255, 255, 255);
   font-size: 16px;
-	/* border: 1px solid rgb(228, 228, 228); */
-	/* border-bottom: 3px solid gray; */
+  outline: none;
 }
