--- a/backend/client/src/styles/Itineraries.css
+++ b/backend/client/src/styles/Itineraries.css
@@ -6,14 +6,14 @@
     margin-bottom: 58px;
 }
 .Itineraries__nav{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 5px 0;
+    margin: 0 auto;
+    padding: 5px 10px;
 }
-.Itineraries__nav h3, button{
+.Itineraries__nav h3{
     margin: 0 2px;
+    letter-spacing: 2px;
+    font-weight: normal;
+    font-size: 22px;
 }
 
 .Itineraries__container{
