--- a/backend/client/src/components/Itinerary/Itinerary.css
+++ b/backend/client/src/components/Itinerary/Itinerary.css
@@ -1,119 +1,121 @@
 .Itinerary__item {
-    width: 100%;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    transition: 500ms;
-    background-color: rgb(255, 255, 255);
-    color: #000;
-    border-radius: 10px;
-    margin-bottom: 10px;
-    height: auto;
-    position: relative;
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  transition: 500ms;
+  background-color: rgb(255, 255, 255);
+  color: #000;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  height: auto;
+  position: relative;
 }
-.Itinerary__card{
-    display: flex;
-    padding: 10px 3px;
+.Itinerary__card {
+  display: flex;
+  padding: 10px 3px;
 }
-
-
 
 .Itinerary__profile {
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 5px;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5px;
 }
 
 .Itinerary__profile img {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    object-fit: cover;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  object-fit: cover;
 }
-.Itinerary__profile p{
-    margin-top: 3px;
-    letter-spacing: 2px;
+.Itinerary__profile p {
+  margin-top: 3px;
+  letter-spacing: 2px;
 }
 
 .Itinerary__info {
-    display: flex;
-    flex-direction: column;
-    width: 60%;
-    cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  cursor: pointer;
 }
 
 .Itinerary__info h4,
 p {
-    margin: 0;
+  margin: 0;
 }
-.Itinerary__hastag{
-    display: flex;
-    flex-wrap: wrap;
+.Itinerary__hastag {
+  display: flex;
+  flex-wrap: wrap;
 }
-.Itinerary__hastag span{
-    color: rgb(28, 78, 172);
-    font-weight: bold;
+.Itinerary__hastag span {
+  color: rgb(28, 78, 172);
+  font-weight: bold;
 }
-.Itinerary__hastag p{
-    margin-left: 5px;
-    color: rgb(28, 78, 172);
+.Itinerary__hastag p {
+  margin-left: 5px;
+  color: rgb(28, 78, 172);
 }
 
 .Itineary__data {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.Itineary__data svg{
-    font-size: 20px;
-    position: relative;
-    bottom: 0;
+.Itineary__data svg {
+  font-size: 20px;
+  position: relative;
+  bottom: 0;
 }
 
 .Itinerary__activities {
-    width: 100%;
-    height: 0;
-    background: #ffffff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    transition: 400ms;
+  width: 100%;
+  height: 0;
+  background: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: 400ms;
 }
 
-.Itinerary__activities h4{
-    margin: 5px 0;
+.Itinerary__activities h4 {
+  margin: 5px 0;
 }
 
 .Itinerary__activities__slider {
-    display: flex;
-    align-items: center;
-    max-width: 476px;
-    width: 100%;
-    height: 170px;
-    scroll-snap-type: x proximity;
-    overflow-x: scroll;
+  display: flex;
+  align-items: center;
+  max-width: 476px;
+  width: 100%;
+  height: 170px;
+  scroll-snap-type: x proximity;
+  overflow-x: scroll;
 }
 
 .Itinerary__activities__slider::-webkit-scrollbar {
-    /* display: none; */
+  /* display: none; */
 }
 
 .Itinerary__activities__slider div {
-    scroll-snap-align: center;
+  scroll-snap-align: center;
 }
 
 .Itinerary__button {
-    width: 98%;
-    height: 30px;
-    background-color: rgb(28, 78, 172);
-    margin: 5px;
-    border-radius: 7px;
-    cursor: pointer;
-    font-size: 20px;
-    position: absolute;
-    bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 98%;
+  height: 30px;
+  background-color: rgb(28, 78, 172);
+  color: white;
+  margin: 5px;
+  border-radius: 7px;
+  cursor: pointer;
+  font-size: 20px;
+  position: absolute;
+  bottom: 10px;
 }
