--- a/backend/client/src/components/NavBtn/NavBtn.css
+++ b/backend/client/src/components/NavBtn/NavBtn.css
@@ -1,21 +1,20 @@
 .NavBtn__container {
-    position: fixed;
-    bottom: 0;
-    height: 60px;
-    max-width: 500px;
-    width: 100%;
-    padding: 5px 20px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    color: black;
-    box-sizing: border-box;
-    background-color: white;
-    z-index: 9;
+  position: fixed;
+  bottom: 0;
+  height: 60px;
+  max-width: 500px;
+  width: 100%;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  color: black;
+  box-sizing: border-box;
+  background-color: white;
+  z-index: 9;
 }
 
-.NavBtn__container>a>svg{
-    font-size: 30px;
-    color: black;
-
+.NavBtn__container > a > svg {
+  font-size: 40px;
+  color: black;
 }
