--- a/backend/client/src/styles/Register.css
+++ b/backend/client/src/styles/Register.css
@@ -47,6 +47,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  outline: none;
 }
 
 .Register__form input{
@@ -60,6 +61,8 @@
   padding:5px 15px;
   color: rgb(28, 78, 172);
   text-align: center;
+  outline: none;
+
 }
 .Register__form select{
   width: 60%;
@@ -69,6 +72,7 @@
   padding: 2px 10px;
   font-size: 20px;
   color: rgb(28, 78, 172);
+  outline: none;
 
 }
 .Register__form__terms{
@@ -81,6 +85,8 @@
   width: 20px;
   height: 20px;
   margin: 0;
+  outline: none;
+
 }
 .Register__form__terms p{
   margin-left: 10px;
@@ -96,4 +102,6 @@
   border-radius: 20px;
   color: #fff;
   font-size: 20px;
+  outline: none;
+
 }
