--- a/client/src/components/CarouselImg/CarouselImg.css
+++ b/client/src/components/CarouselImg/CarouselImg.css
@@ -1,8 +1,8 @@
 .CarouselImg{
     height: 280px;
     width: 100%;
-    margin: 5px 0;
-    border-bottom: 2px solid rgb(235, 235, 235);
+    /* margin: 5px 0; */
+    /* border-bottom: 2px solid rgb(235, 235, 235); */
     /* background-color: rgb(209, 234, 255); */
     /* border-radius: 4px; */
     /* border: 1px solid red; */
