Work 7/10 Algo de diseño y definiendo los commentarios

--- a/client/src/styles/Itineraries.css
+++ b/client/src/styles/Itineraries.css
@@ -18,7 +18,8 @@
 
 .Itineraries__container{
     display: flex;
-    min-height: 80vh;
+    min-height: 400px;
     flex-direction: column;
     padding: 0 12px;
+    height: auto;
 }
