--- a/client/src/components/City/City.css
+++ b/client/src/components/City/City.css
@@ -50,10 +50,17 @@
 }
 
 .City__emojis{
+	background: #00c6ff;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	position: absolute;
 	top: 10px;
-	right: 15px;
+	right: 0px;
 	z-index: 2;
-	font-size: 25px;
+	font-size: 17px;
+	padding: 3px;
+	padding-right: 10px;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
 }
 
