--- a/client/src/components/Activities/Activities.css
+++ b/client/src/components/Activities/Activities.css
@@ -1,15 +1,7 @@
-.activities_header{
-    height: auto;
-    margin-top: 30px;
-}
-.activities{
+.Activities__slider{
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-bottom: 15px;
-}
-.activities_header img{
+    flex-direction: row;
     width: 100%;
-    position: relative;
-    top: 10px
+    overflow: hidden;
+    height: 300px;
 }
