--- a/client/src/components/ActivityByItinerary/ActivityByItinerary.css
+++ b/client/src/components/ActivityByItinerary/ActivityByItinerary.css
@@ -3,28 +3,33 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 180px;
-    height: 130px;
+    width: 100%;
+    height: 100%;
     background: rgb(255, 255, 255);
     /* border-radius: 10px; */
     /* border: 1px solid #000; */
-    margin: 5px 7px;
-    padding: 0 10px;
+    margin-right: 10px;
+    /* padding: 0 0; */
     box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.75);
     cursor: pointer;
     flex-shrink: 0;
+    scroll-snap-align: center;
 }
 
 .ActivityByItinerary__item p {
     z-index: 0;
     color: white;
     font-size: 28px;
+    position: absolute;
+    text-align: center;
+    top: 20%;
 }
 
 .ActivityByItinerary__item img {
     position: absolute;
+    top: 0;
     width: 100%;
-    height: 100%;
+    height: 180px;
     object-fit: cover;
     overflow: hidden;
     filter: brightness(70%);
