--- a/client/src/components/ActivityByItinerary/ActivityByItinerary.css
+++ b/client/src/components/ActivityByItinerary/ActivityByItinerary.css
@@ -12,7 +12,7 @@
     /* padding: 0 0; */
     box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.75);
     flex-shrink: 0;
-    scroll-snap-align: center;
+    scroll-snap-align: start;
 }
 
 .ActivityByItinerary__item p {
@@ -33,4 +33,43 @@
     overflow: hidden;
     filter: brightness(70%);
     cursor: pointer;
+}
+
+.ActivityByItinerary__address{
+    position: absolute;
+    top: 38%;
+    width: 80%;
+    background: white;
+    z-index: 2;
+    height: 20px;
+    display: flex;
+    justify-content: space-around;
+    border-radius: 10px;
+}
+.ActivityByItinerary__address p{
+    position: relative;
+    color: black;
+    font-size: 12px;
+}
+.ActivityByItinerary__price{
+    position: absolute;
+    top: 5%;
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    z-index: 2;
+    height: 20px;
+    width: 55px;
+    right: 5%;
+    border-radius: 10px;
+}
+.ActivityByItinerary__price p{
+    position: relative;
+    color: black;
+    font-size: 16px;
+    top: 0;
+}
+.ActivityByItinerary__price svg{
+    font-size: 20px;
 }
